# examples

./: .gitignore  Cargo.toml  README.md
.github/workflows/: basic.yml  sync_site.yml
.github/workflows/install-deps/: action.yml
antsforaging/: Cargo.toml  README.md  index.html
antsforaging/src/: main.rs
antsforaging/src/model/: ant.rs  mod.rs  state.rs  to_food_grid.rs  to_home_grid.rs
antsforaging/src/visualization/: ant.rs  custom_system.rs  item.rs  mod.rs  static_object.rs  vis_state.rs
aws_flockers/: Cargo.toml  output.json
aws_flockers/src/: aws.sh  main.rs  rab_aws.sh
aws_sir_ga_exploration/: .gitignore  Cargo.toml
aws_sir_ga_exploration/rab_aws/: parameters_0.json  parameters_1.json  parameters_t.json  policy.json  rab_aws_deploy.sh  rolePolicy.json
aws_sir_ga_exploration/src/: function.rs  main.rs
aws_sir_ga_exploration/src/model/: state.rs
boids/: Cargo.toml
boids/src/: main.rs
boids/src/model/: bird.rs  boids_state.rs
boids/src/visualization/: bird.rs  vis_state.rs
distributedflocker/: .gitignore  Cargo.toml  README.md  result_0.csv  result_1.csv  result_2.csv  result_3.csv
distributedflocker/src/: main.rs
distributedflocker/src/model/: bird.rs  state.rs
distributedflocker/src/visualization/: bird_vis.rs  vis_state.rs
flocker_mpi/: Cargo.toml
flocker_mpi/src/: main.rs
flocker_mpi/src/model/: bird.rs  state.rs
flockers/: Cargo.toml  Makefile.toml  README.md  diocant.txt  diocant2.txt
flockers/src/: main.rs
flockers/src/model/: bird.rs  mod.rs  state.rs
flockers/src/visualization/: bird_vis.rs  vis_state.rs
flockers3D/: .gitignore  Cargo.toml
flockers3D/src/: main.rs
flockers3D/src/model/: bird.rs  state.rs
flockers3D/src/visualization/: bird_vis.rs  vis_state.rs
flockers_exploration/: Cargo.toml
flockers_exploration/src/: main.rs
flockers_exploration/src/model/: bird.rs  state.rs
flockers_mpi/: Cargo.toml  README.md
flockers_mpi/src/: main.rs
flockers_mpi/src/model/: bird.rs  state.rs
flockers_mpi/src/visualization/: bird_vis.rs
flockers_original/: Cargo.toml
flockers_original/src/: main.rs
flockers_original/src/model/: bird.rs  state.rs
flockers_original/src/visualization/: vis_state.rs
flockers_original_kdtree/src/: main.rs
flockers_original_kdtree/src/model/: bird.rs  state.rs
flockers_tui/: Cargo.toml  index.html
flockers_tui/src/model/: bird.rs
flockers_tui/src/visualization/: bird_vis.rs
flockerstui/: Cargo.toml
flockerstui/src/: main.rs
flockerstui/src/model/: bird.rs  state.rs
flockerstui/src/visualization/: mod.rs
forestfire/: Cargo.toml  README.md
forestfire/src/: main.rs
forestfire/src/model/: forest.rs  spread.rs
forestfire/src/visualization/: custom_systems.rs  forest_vis.rs  mod.rs
forestfire_bayesian/: Cargo.toml  README.md
forestfire_bayesian/src/: main.rs
forestfire_bayesian/src/model/: forest.rs  mod.rs  spread.rs
forestfire_bayesian/src/visualization/: custom_systems.rs  forest_vis.rs
gis/: Cargo.toml
gis/maps/: 20mUsa.json  map.geojson
gis/src/: main.rs
gis/src/model/: map.rs  mod.rs  person.rs
gis/src/visualization/: map_vis.rs  mod.rs  person_vis.rs
predatorprey/: Cargo.toml  README.md
predatorprey/src/: main.rs
predatorprey/src/model/: animals.rs  grass.rs  mod.rs  sheep.rs  state.rs  wolf.rs
robotic_factory/: .gitignore  Cargo.toml  README.md
robotic_factory/src/: main.rs
robotic_factory/src/model/: mod.rs  order.rs  robot.rs  robot_factory.rs  stations.rs
schelling/: Cargo.toml  README.md
schelling/src/: main.rs
schelling/src/model/: mod.rs  updater.rs  world.rs
schelling/src/visualization/: custom_systems.rs  mod.rs  world_vis.rs
sir_bayesian/: .gitignore  Cargo.toml  README.md
sir_bayesian/src/: main.rs
sir_ga_exploration/: .gitignore  Cargo.toml  README.md  explore_result.csv
sir_ga_exploration/rab_aws/: parameters_0.json  parameters_1.json  rab_aws_deploy.sh  result.json
sir_ga_exploration/src/: function.rs  main.rs
sir_ga_exploration/src/model/: mod.rs  node.rs  state.rs
sir_model_exploration/: Cargo.toml
sir_model_exploration/src/: main.rs
sir_paper/: .gitignore  100k_explore_result.csv  Cargo.toml  explore_result.csv  explore_result_01.csv  index.html  nohup.out  sim_data.csv
sir_paper/data/: data.csv  data_norm_10k.csv  data_perc.csv  data_perc_15.csv  data_perc_30.csv  data_perc_60.csv  data_perc_mid.csv
sir_paper/src/: main.rs
sir_paper_bayesian/: Cargo.toml
sir_paper_bayesian/src/: main.rs
sir_paper_one/: Cargo.toml
sir_paper_one/data/: data_perc_full.csv  data_perc_mid.csv
sir_paper_one/src/: main.rs
sir_paper_one/src/model/: node.rs  state.rs
sugarscape/: .gitignore  Cargo.toml  README.md
sugarscape/src/: main.rs
sugarscape/src/model/: eater.rs  mod.rs  state.rs
sugarscape/src/visualization/: eater_vis.rs  environment_vis.rs  mod.rs  patch_vis.rs
template/: Cargo.toml  README.md
template/src/: main.rs
test/: Cargo.toml
test/rab_aws/: function.rs  output.json  parameters.json  rab_aws_deploy.sh  rab_aws_invoke.sh  rab_aws_undeploy.sh
test/src/: function.rs  function_working.rs  main.rs
virusnetwork/: Cargo.toml  Makefile.toml  README.md
virusnetwork/src/: main.rs
virusnetwork/src/model/: epidemic_network.rs  mod.rs  node.rs  state.rs
virusnetwork/src/visualization/: mod.rs  node.rs  vis_network.rs  vis_state.rs
virusnetwork_exploration/: Cargo.toml
virusnetwork_exploration/src/: main.rs
virusnetwork_exploration/src/model/: node.rs  state.rs
wolfsheepgrass/: .gitignore  Cargo.toml  README.md
wolfsheepgrass/src/: main.rs
wolfsheepgrass/src/model/: animals.rs  animals_grid.rs  grass.rs  mod.rs  sheep.rs  state.rs  wolf.rs
wolfsheepgrass/src/visualization/: animals.rs  custom_system.rs  grass_vis.rs  mod.rs  sheep_vis.rs  vis_state.rs  wolf_vis.rs
wsg_fitness_exploration/: Cargo.toml  ga_result.txt
wsg_fitness_exploration/src/: main.rs
wsg_ga_exploration/: Cargo.toml  README.md
wsg_ga_exploration/src/: main.rs
wsg_model_exploration/: .gitignore  Cargo.toml  result.csv
wsg_model_exploration/src/: main.rs
(+29 files in other folders)
