[package]
name = "flockers_mpi"
version = "0.2.0"
authors = [
    "Carmine Spagnuolo <spagnuolocarmine@gmail.com>", 
    "Alessia Antelmi <aantelmi@unisa.it>", 
    "Matteo D'Auria <matdauria@unisa.it>", 
    "Daniele De Vinco <danieledevinco1996@gmail.com", 
    "Francesco Foglia <frafonia@gmail.com>", 
    "Pasquale Caramante <pasqcaramante@gmail.com>", 
    "Luca Postiglione <lucapostiglione10@gmail.com>", 
    "Giuseppe D'Ambrosio <giuseppe.dambrosio14@gmail.com>"
]
edition = "2021"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# krabmaga = "0.1.*"
# krabmaga = {git = "https://github.com/krABMaga/krABMaga"}
#krabmaga = {path="/Users/ddevin/Documents/krABMaga"}
krabmaga = {path="/home/andrea/Distributed_KdTree/krABMaga"}


mpi = { version = "0.6", features = ["user-operations", "derive"] }

[features]
distributed_mpi = ["krabmaga/distributed_mpi"]
parallel = ["krabmaga/parallel"]
visualization = ["krabmaga/visualization"]
visualization_wasm = ["krabmaga/visualization_wasm"]
