[package]
name = "robotic_factory"
version = "0.2.0"
authors = [
    "Carmine Spagnuolo <spagnuolocarmine@gmail.com>",
    "Alessia Antelmi <aantelmi@unisa.it>",
    "Matteo D'Auria <matdauria@unisa.it>",
    "Daniele De Vinco <danieledevinco1996@gmail.com",
    "Francesco Foglia <frafonia@gmail.com>",
    "Pasquale Caramante <pasqcaramante@gmail.com>",
    "Luca Postiglione <lucapostiglione10@gmail.com>",
    "Giuseppe D'Ambrosio <giuseppe.dambrosio14@gmail.com>",
    "Lion Wagner <lion.wagner@datev.de>"
]
edition = "2021"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
krabmaga = { git = "https://github.com/krABMaga/krABMaga" }

[features]
visualization = ["krabmaga/visualization"]
visualization_wasm = ["krabmaga/visualization_wasm"]
