[package]
name = "sir_ga_exploration"
version = "0.2.0"
authors = [
    "Carmine Spagnuolo <spagnuolocarmine@gmail.com>", 
    "Alessia Antelmi <aantelmi@unisa.it>", 
    "Matteo D'Auria <matdauria@unisa.it>", 
    "Daniele De Vinco <danieledevinco1996@gmail.com", 
    "Francesco Foglia <frafonia@gmail.com>", 
    "Pasquale Caramante <pasqcaramante@gmail.com>", 
    "Luca Postiglione <lucapostiglione10@gmail.com>", 
    "Giuseppe D'Ambrosio <giuseppe.dambrosio14@gmail.com>"
]
edition = "2018"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rust-ab = { path="/home/giuseppe/Git/exp_rab/rust-ab" }
rust-ab = { git="https://github.com/rust-ab/rust-ab", branch="me_string" }

[features]
distributed_mpi = ["rust-ab/distributed_mpi"]
aws = ["rust-ab/parallel"]