[package]
name = "aws_flockers"
version = "0.1.0"
authors = [
    "Carmine Spagnuolo <spagnuolocarmine@gmail.com>", 
    "Alessia Antelmi <aantelmi@unisa.it>", 
    "Matteo D'Auria <matdauria@unisa.it>", 
    "Daniele De Vinco <danieledevinco1996@gmail.com", 
    "Francesco Foglia <frafonia@gmail.com>", 
    "Pasquale Caramante <pasqcaramante@gmail.com>", 
    "Luca Postiglione <lucapostiglione10@gmail.com>", 
    "Giuseppe D'Ambrosio <giuseppe.dambrosio14@gmail.com>"
]
edition = "2018"
license = "MIT"
readme = "README.md"
default-run = "execute"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ab = { git="https://github.com/rust-ab/rust-ab" }
lambda_runtime = "0.4"
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
tokio = { version = "1.*", features = ["full"] }
aws-config = "0.4"
aws-sdk-sqs = "0.4"
aws-sdk-lambda = "0.4"
futures = "0.3"

[[bin]]
name = "function"
path = "src/function.rs"

[[bin]]
name = "execute"
path = "src/main.rs"