[package]
name = "virusnetwork"
version = "0.1.0"
authors = ["zioposty <l.postiglione4@studenti.unisa.it>"]
edition = "2018"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ab = {path="../../abm"}

[features]
visualization = ["rust-ab/visualization"]
visualization_wasm = ["rust-ab/visualization_wasm"]
